# aptos

./: README.md
app/: .gitignore  AppDelegate.swift  Makefile  Podfile  R.generated.swift  RustCall.swift  ViewController.swift
app/App.xcodeproj/: project.pbxproj
app/Resources/: GoogleService-Info.plist  Info.plist
app/Sources/: AppDelegate.swift  CreateWalletView.swift  CurrentService.swift  FirestoreDB.swift  OnboardingViewController.swift  RustCall.swift  ViewController.swift  WalletViewController.swift
app/Sources/Aptos/: Aptos.swift
app/Sources/Common/: AnimationTiming.swift  DurationFormatter.swift  GradientView.swift  Logger.swift  Spinner.swift
app/Sources/Configuration/: SystemConfiguration.swift
app/Sources/Core/: Aptos.swift
app/Sources/Models/: Account.swift  Profile.swift
app/Sources/Onboarding/: CreateAccountView.swift  CreateTeamComponent.swift  CreateTeamView.swift  JoinTeamComponent.swift  OnboardingViewController.swift
app/Sources/SwiftUI/: AddButton.swift  CreateWalletView.swift  CustomButtonStyle.swift  ModalViewIndicator.swift
app/Sources/ViewControllers/: OldWalletViewController.swift  OnboardingViewController.swift  (+3 more)
core/: .gitignore  Cargo.toml  Makefile  bindings.h  build.rs
core/src/: lib.rs  rust_data.rs
core/src/aptos/: account.rs  error.rs  faucet_client.rs  mod.rs  model.rs  response.rs  rest_client.rs  shared_account.rs  shared_wallet.rs
core/src/async_dispatch/: mod.rs
core/src/core/: mod.rs
core/src/logger/: mod.rs
core/src/requests/: mod.rs
core/src/sync_dispatch/: mod.rs
protos/: core.proto
(+49 files in other folders)
