[package]
name = "core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "core"
# Create a static library
crate-type = ["staticlib"]

[dependencies]
prost = "0.10.1"
prost-types = "0.10.1"
backtrace = "0.3.60"
futures = "0.3.15"
lazy_static = "1.4.0"
tokio = { version="1.7.1", features=["rt-multi-thread", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
rand = "0.8.3"
hex = "0.4.3"
tiny-keccak = { version = "2.0.2", default-features = false, features = ["sha3"] }
ed25519-dalek = { version = "0.1.0", package = "ed25519-dalek-fiat", default-features = false, features = ["std", "serde", "fiat_u64_backend"] }
reqwest = { version = "0.11.2", features = ["json"] }
log = "0.4.16"
env_logger = "0.9.0"
chrono="0.3.0"

[build-dependencies]
cbindgen = "0.19.0"
prost-build = "0.10.1"
